# pyrisc

./: .gitignore  LICENSE  pyproject.toml
asm/: .gitignore  Makefile  myprog  myprog.s
sim/: components.py  consts.py  kernel.py  sim.py  snurisc.py
src/pyrisc/pipe5/: README.md  components.py  consts.py  control.py  datapath.py  isa.py  program.py  snurisc5.py
src/pyrisc/sim/: components.py  consts.py  isa.py  kernel.py  program.py  sim.py  snurisc.py
