[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrisc"
version = "0.0.1"
authors = [
  { name="snu-csl, Dawid Sroka" },
]
dependencies = ["numpy", "pyelftools"]
description = "pyrisc adjusted for Kite floating kernel"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

#[project.urls]
#"Homepage" = ""
#"Bug Tracker" = ""
